[package]
name = "dhoni"
version = "0.1.0"
description = "A crate for converting Bengali text into their phonetic counterpart."
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
categories = ["text-processing"]
keywords = ["phonetic", "bangla", "bengali", "avro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenBangla/dhoni"
edition = "2018"
